5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1594_1800.log
== TEST (2019-03-19 16:07:12) 
-- CODE:
a=1
b=2
c=3

s=(a**2+b**2+c**2)/(a+b+c)

print(round(s,6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:07:16) 
-- CODE:
a=1
b=2
c=3

s=(a**2+b**2+c**2)/(a+b+c)

print(round(s,6))
-- EXECUTION TIME:
0.144777
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:07:35) 
-- CODE:
a=1
b=2
c=3

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:07:36) 
-- CODE:
a=1
b=2
c=3

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- EXECUTION TIME:
0.173674
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:09:16) 
-- CODE:
a=1
b=2
c=3

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- EXECUTION TIME:
0.198386
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:09:30) 
-- CODE:
a=1
b=2
c=3

x=(a**2+b**2+c**2)//(a+b+c)

print(round(x,6))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:09:32) 
-- CODE:
a=1
b=2
c=3

x=(a**2+b**2+c**2)//(a+b+c)

print(round(x,6))
-- EXECUTION TIME:
0.221583
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:09:45) 
-- CODE:
a=
b=
c=

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- ERROR:
File "XXXX", line 1
    a=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:10:36) 
-- CODE:
a= input()
b=input()
c=input()

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x=(a**2+b**2+c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:13:15) 
-- CODE:
a= int()
b=int()
c=int()

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x=(a**2+b**2+c**2)/(a+b+c)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:13:17) 
-- CODE:
a= int()
b=int()
c=int()

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x=(a**2+b**2+c**2)/(a+b+c)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:13:37) 
-- CODE:
a=int(1)
b=int(2)
c=int(3)

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:13:39) 
-- CODE:
a=int(1)
b=int(2)
c=int(3)

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- EXECUTION TIME:
0.141117
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:19:31) 
-- CODE:
q=input("")
w=input("1")
e=input("")

a=
b=
c=

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- ERROR:
File "XXXX", line 5
    a=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:19:37) 
-- CODE:
q=input("")
w=input("1")
e=input("")

a=q
b=w
c=e

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(a**2+b**2+c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:19:46) 
-- CODE:
q=input("")
w=input("1")
e=input("")

a=q
b=w
c=e

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(a**2+b**2+c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:19:50) 
-- CODE:
q=input("")
w=input("")
e=input("")

a=q
b=w
c=e

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(a**2+b**2+c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:20:10) 
-- CODE:
q=input()
w=input()
e=input()

a=q
b=w
c=e

x=(a**2+b**2+c**2)/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(a**2+b**2+c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:12) 
-- CODE:
q=input()
w=input()
e=input()

a=q
b=w
c=e

x=( a**2 + b**2 + c**2 )/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=( a**2 + b**2 + c**2 )/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:27) 
-- CODE:
q=input()
w=input()
e=input()

a=q
b=w
c=e

x=( a**2 + b**2 + c**2 )/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=( a**2 + b**2 + c**2 )/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:21:30) 
-- CODE:
q=input()
w=input()
e=input()

a=q
b=w
c=e

x=( a**2 + b**2 + c**2 )/(a+b+c)

print(round(x,6))
-- EXECUTION TIME:
0.12021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 9, in <module>
    x=( a**2 + b**2 + c**2 )/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:04) 
-- CODE:
q=input()
w=input()
e=input()

a=q
b=w
c=e

x=( a**2 + b**2 + c**2 )/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=( a**2 + b**2 + c**2 )/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:54:32) 
-- CODE:
q=input()
w=input()
e=input()

a=q
b=w
c=e

x=(a ** 2 + b ** 2 + c ** 2)/(a+b+c)

print(round(x,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(a ** 2 + b ** 2 + c ** 2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:28:32) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x=(a ** 2 + b ** 2 + c ** 2)/(a+b+c)

print(round(x,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:28:39) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x=(a ** 2 + b ** 2 + c ** 2)/(a+b+c)

print(round(x,6))
-- EXECUTION TIME:
0.133317
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:28:49) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x=(a ** 2 + b ** 2 + c ** 2)?/(a+b+c)

print(round(x,6))
-- EXECUTION TIME:
0.188171
-- ERROR:
  File "/home/codebench/codes/1594/1800/main.py", line 5
    x=(a ** 2 + b ** 2 + c ** 2)?/(a+b+c)
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:29:01) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x=(a ** 2 + b ** 2 + c ** 2)//(a+b+c)

print(round(x,6))
-- EXECUTION TIME:
0.139344
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:29:04) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x=(a ** 2 + b ** 2 + c ** 2)//(a+b+c)

print(round(x,6))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:29:25) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x = (a ** 2 + b ** 2 + c ** 2) // ( a + b + c)

print(round(x,6))
-- EXECUTION TIME:
0.125236
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:29:26) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x = (a ** 2 + b ** 2 + c ** 2) // ( a + b + c)

print(round(x,6))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:29:31) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x = (a ** 2 + b ** 2 + c ** 2) // ( a + b + c)

print(round(x,6))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:29:38) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x = (a ** 2 + b ** 2 + c ** 2)//( a + b + c)

print(round(x,6))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:29:50) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x=(a ** 2 + b ** 2 + c ** 2)//( a + b + c)

print(round(x,6))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:30:19) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x=(a ** 2 + b ** 2 + c ** 2)//( a + b + c)

print(round(x,6))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:30:22) 
-- CODE:
a=int(input(""))
b=int(input(""))
c=int(input(""))

x=(a ** 2 + b ** 2 + c ** 2)//( a + b + c)

print(round(x,6))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:31:52) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))

X=(a**2+b**2+c**2)//(a+b+c)

print(X)
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:32:01) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))

X=(a**2+b**2+c**2)//(a+b+c)

print(X)
-- EXECUTION TIME:
0.152875
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:32:32) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))

X=(a**2+b**2+c**2)//(a+b+c)

print(round(X,6))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:32:56) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))

X=(a**2+b**2+c**2)/(a+b+c)

print(round(X,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:33:00) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))

X=(a**2+b**2+c**2)/(a+b+c)

print(round(X,6))
-- EXECUTION TIME:
0.1708
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:26:32) 
-- CODE:
a=float(input("valor de a:"))
b=float(input("valor de b:"))
c=float(input("valor de c:"))

X=(a**2+b**2+c**2)/(a+b+c)

print(round(X,7))
-- EXECUTION TIME:
0.129386
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
